# Rougetsu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  packfile.cpp  packfile.h  utils.h
cmake/: glad.cmake  glfw.cmake  glm.cmake  raylib.cmake
common/: packfile.cpp
graph3d/: g3dCore.cpp  g3dDebug.cpp  g3d_types.h  gra3d.cpp  gra3dDma.cpp  gra3dSGD.cpp  gra3dSGD.h  gra3dSGDData.cpp  gra3dShadow.cpp  sgd_types.h
render/: Vu1Mem.cpp  Vu1Mem.h  renderer.cpp  renderer.h
sce/: libvu0.cpp  libvu0.h  sce_types.h
